# cycax-blender-worker

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yaml  mkdocs.yml  pyproject.toml
.gitea/workflows/: build.yaml
src/: start.sh
src/cycax_blender_worker/: __about__.py  assembler.py  client.py  config.py  main.py
